<?xml version="1.0"?>
<package format="3">
  <name>cable_conv</name>
  <version>0.0.0</version>
  <description>The cable_sim package for ROS2</description>

  <maintainer email="bigss@todo.todo">bigss</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
